# gwave-analyzer

./: .gitignore  MIDI-FORMAT.txt  SignalReader.h  comune.c  comune.h  debug_log.c  debug_log.h  event2notes.c  fft.cpp  fourier.c  fourier.h  gtkanalisi.c  gtkcomune.h  gwave-gtk  icona.xpm  main.c  makefile  melodia.txt  melody.mid  meson.build  notes_distiller.c  notes_distiller.h  sample.manifest  sample.rc  ui-fourier.c  ui-fourier.h  ui-main.c  wav-appunti.txt  wav2midi.c  wav2midi.h  wav2midi_priv.h  wav_reader.c  wav_reader.h  wtm.c
